<resources>
    <string name="app_name">Pandora</string>
    <string name="label">Pandora</string>
    <string name="login_label">Log in</string>
    <string name="action_settings">Settings</string>
    <string name="sync_button">Sync</string>
    <string name="logout_button">Logout</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="version">Version</string>
    <string name="nav_item_recruit">Recruit</string>
    <string name="nav_item_deploy">Deploy/Track/Inspect</string>
    <string name="nav_item_assets">Assets(Beta)</string>
    <string name="nav_item_requisition">Requisition(Beta)</string>
    <string name="nav_item_task">Task(Beta)</string>
    <string name="nav_item_guardtour_checkin">Check In(Beta)</string>
    <string name="nav_item_guardtour_projectlocation">Check Point(Beta)</string>
    <string name="nav_item_broadcast">Broadcasts(Beta)</string>
    <string name="nav_item_attendance">Attendance</string>
    <string name="nav_item_newcheckin">New Check In(Beta)</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_connection">Connection</string>
    <string name="nav_item_defaults">Defaults</string>
    <string name="nav_item_preferences">Preferences</string>
    <string name="cmn_select_datetime">Press to Select Date/Time</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_attendance</item>
        <item>@string/nav_item_recruit</item>
        <item>@string/nav_item_assets</item>
        <item>@string/nav_item_requisition</item>
        <item>@string/nav_item_task</item>
        <item>@string/nav_item_guardtour_checkin</item>
        <item>@string/nav_item_guardtour_projectlocation</item>
        <item>@string/nav_item_broadcast</item>
        <item>@string/nav_item_settings</item>
    </string-array>
    <string name="title_recruit">Recruit</string>
    <string name="title_deploy">Deploy</string>
    <string name="title_assets">Assets</string>
    <string name="title_requisition">Requisition</string>
    <string name="title_requisitionline">Requisition Line</string>
    <string name="title_task">Task</string>
    <string name="title_guardtour_checkin">Check In</string>
    <string name="title_guardtour_projectlocation">Check Point</string>
    <string name="title_broadcast">Broadcast</string>
    <string name="title_newcheckin">New Check In</string>
    <string name="title_details">Details</string>
    <string name="title_account">Account</string>
    <string name="title_employees">Employees</string>
    <string name="title_applicants">Applicants</string>
    <string name="title_newapplicant">New Applicant</string>
    <string name="title_applicantdetails">Applicant Details</string>
    <string name="title_movement">Movements</string>
    <string name="title_employee_details">Employee Details</string>
    <string name="title_broadcastdetails">Broadcast Details</string>
    <string name="title_projtaskdetails">Project Task Details</string>
    <string name="title_surveydetails">Survey Details</string>
    <string name="title_auditdetails">Audit Details</string>
    <string name="title_default"></string>
    <string name="title_camera_button">Take Picture</string>
    <string name="title_gallery_button">Load From Gallery</string>
    <string name="title_attendanceline">Attendance Line</string>
    <string name="title_attendances">Attendance</string>
    <string name="title_attendancesearch">Search</string>
    <string name="label_name">Name</string>
    <string name="label_idnumber">ID No</string>
    <string name="label_idtype">ID Type</string>
    <string name="label_phone">Phone</string>
    <string name="label_default_projloc">Proj Loc</string>
    <string name="app_label_status">Status</string>
    <string name="label_sex">Gender</string>
    <string name="label_profpic">Profile Picture</string>
    <string name="label_jobtitle">Job Title</string>
    <string name="label_status">Status</string>
    <string name="label_sel_dateassigned">Select Date Assigned</string>
    <string name="label_dateassigned">Date Assigned</string>
    <string name="label_sel_duedate">Select Due Date</string>
    <string name="label_duedate">Due Date</string>
    <string name="label_interviewernotes">Interviewer Notes</string>
    <string name="label_nationality">Nationality</string>
    <string name="label_prefjobloc">Pref. Job Location</string>
    <string name="label_age">Age</string>
    <string name="label_maritalstat">Marital Status</string>
    <string name="label_qualificationhigh">Qual. High</string>
    <string name="label_qualificationother">Qual. Other</string>
    <string name="label_applicationdate">Select Application Date</string>
    <string name="label_hrsetupjob">HR Setup Job</string>
    <string name="label_hrnationality">HR Nationality</string>
    <string name="label_expectedsalary">Expected Salary</string>
    <string name="label_isexp">Is Experienced</string>
    <string name="label_yearsofexp">Years of Experience</string>
    <string name="label_prefShift">Pref. Shift</string>
    <string name="label_certpic1">Image [1]</string>
    <string name="label_certpic2">Image [2]</string>
    <string name="label_certpic3">Image [3]</string>
    <string name="label_certpic4">Image [4]</string>
    <string name="label_certpic5">Image [5]</string>
    <string name="label_certpic6">Image [6]</string>
    <string name="label_certpic7">Image [7]</string>
    <string name="label_certpic8">Image [8]</string>
    <string name="label_certpic9">Image [9]</string>
    <string name="label_certpic10">Image [10]</string>
    <string name="label_sender">Sender</string>
    <string name="label_date">Date</string>
    <string name="label_sel_date">Select Date</string>
    <string name="label_datefrom">Select Date From</string>
    <string name="label_dateto">Select Date To</string>
    <string name="label_filterby">Filter By </string>
    <string name="label_value">Value </string>
    <string name="label_shift">Shift </string>
    <string name="label_attendancetype">Attendance Type </string>
    <string name="label_employees">Employees </string>
    <string name="label_isabsent">Absent</string>
    <string name="label_iswork">Work</string>
    <string name="label_isnoshow">No Show</string>
    <string name="label_sel_checkindate">Select Check In</string>
    <string name="label_sel_checkoutdate">Select Check Out</string>
    <string name="label_checkindate">Check In</string>
    <string name="label_checkoutdate">Check Out</string>
    <string name="label_leavetype">Leave Type</string>
    <string name="label_daytype">Day Type</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_sync">Initial Syncing. Please wait</string>
    <string name="label_productname">Name</string>
    <string name="label_productvalue">Value</string>
    <string name="label_qty">Qty</string>
    <string name="label_asi">ASI</string>
    <string name="label_fromprojloc">From
        </string>
    <string name="label_toprojloc">To
        </string>
    <string name="label_docno">Document No </string>
    <string name="movement_label_lines">Lines
        </string>
    <string name="mvl_label_productname">Name
        </string>
    <string name="mvl_label_productvalue">Value
        </string>
    <string name="mvl_label_onhandqty">On Hand Qty</string>
    <string name="mvl_label_asi">ASI
        </string>
    <string name="mvl_label_uom">UOM
        </string>
    <string name="label_movementqty">Movement Qty </string>
    <string name="label_onhandqty">On Hand Quantity </string>
    <string name="label_movementdate">Select Movement Date </string>
    <string name="label_uom">UOM </string>
    <string name="text_projectloc_na">Project Location is not selected.
        Please select the project location in defaults setting tab.</string>
    <string name="text_icon_add">Add</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_married">Married</string>
    <string name="text_single">Single</string>
    <string name="text_add_line">Add line</string>
    <string name="text_remove_line">Remove line</string>
    <string name="label_required_date">Select Required Date</string>
    <string name="label_projloc">Proj. Location</string>
    <string name="label_requester">Requester</string>
    <string name="label_purchase_reason">Purchase Reason</string>
    <string name="label_emergency">Emergency</string>
    <string name="req_label_status">Status</string>
    <string name="req_label_docno">Document No</string>
    <string name="reqdetails_label_status">Status</string>
    <string name="reqdetails_label_projloc">Proj. Location</string>
    <string name="reqdetails_label_sel_requested_date">Select Requested Date</string>
    <string name="label_comment">Comment</string>
    <string name="label_lines">Lines</string>
    <string name="label_line">Line </string>
    <string name="label_button_request">Request</string>
    <string name="label_button_submit">Submit</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_start">Start</string>
    <string name="label_button_complete">Complete</string>
    <string name="label_not_approved">Not Approved</string>
    <string name="label_pretaskpicture">Pre-Task Picture </string>
    <string name="label_picture">Picture [%1$s] </string>
    <string name="label_picture1">Picture [1] </string>
    <string name="label_picture2">Picture [2] </string>
    <string name="label_picture3">Picture [3] </string>
    <string name="label_picture4">Picture [4] </string>
    <string name="label_picture5">Picture [5] </string>
    <string name="taskdetails_label_comment">Comment</string>
    <string name="taskdetails_label_status">Status</string>
    <string name="album_name">Pandora Album</string>
    <string name="label_requisition_settings">Requisition</string>
    <string name="label_displayprodname">Display Product Name</string>
    <string name="label_displayprodval">Display Product Value</string>
    <string name="title_requisitiondetails">Requisition Details</string>
    <string name="title_newrequisition">New Requisition</string>
    <string name="title_newrequisitionline">New Requisition Line</string>
    <string name="title_requisitionlinedetails">Requisition Line Details</string>
    <string name="title_asset_details">Asset Details</string>
    <string name="title_newmovement">New Movement</string>
    <string name="title_newmovementline">New Movement Line</string>
    <string name="label_button_move">Move</string>
    <string name="movement_greater_than">Movement quantity greater than Quantity On Hand</string>
    <string name="movement_lesser_than">Movement must be a positive number</string>
    <string name="title_movement_details">Details</string>
    <string name="title_deployment_details">Deployment Details</string>
    <string name="title_movementline_details">Movement Line Details</string>
    <string name="title_task_details">Project Task Details</string>
    <string name="title_attentance">Attendance</string>
    <string name="title_create_attendance">New Attendance</string>
    <string name="label_taskname">Task Name</string>
    <string name="label_taskprojloc">Project Location</string>
    <string name="label_taskdesc">Description</string>
    <string name="label_assignto">Assign To</string>
    <string name="label_taskSeqNo">Priority</string>
    <string name="label_template">Template</string>
    <string name="title_selectprojectloc">Select Project Location</string>
    <string name="title_selectproduct">Select Product</string>
    <string name="title_selecttemplate">Select Template</string>
</resources>