<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".PandoraMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle|end"
        android:orientation="vertical">

        <include layout="@layout/profile_image" />

        <include layout="@layout/recruit_details" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle|end"
            >
            <TableRow >
                <LinearLayout style="@style/PTableVirtRowW">

                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_sex"/>

                <Spinner
                    android:id="@+id/genderSpinner"
                    style="@style/TableValue" />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    android:id="@+id/textViewApplAge"
                    style="@style/TableInfoLabel"
                    android:text="@string/label_age" />

                <EditText
                    android:id="@+id/editTextApplAge"
                    style="@style/TableValue"
                    android:inputType="number"/>
                </LinearLayout>
            </TableRow>

            <TableRow>

                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_maritalstat" />

                <Spinner
                    android:id="@+id/maritalStatSpinner"
                    style="@style/TableValue" />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    android:id="@+id/textViewApplDate"
                    style="@style/TableInfoLabel"
                    android:text="@string/label_applicationdate"/>
                <TextView
                    android:id="@+id/editTextApplDate"
                    style="@style/TableValueDate"
                    android:hint="Press to Select Date" />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_hrsetupjob" />
                <Spinner
                    android:id="@+id/setupJobSpinner"
                    style="@style/TableValue" />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_hrnationality" />

                <Spinner
                    android:id="@+id/nationalitySpinner"
                    style="@style/TableValue" />
                </LinearLayout>

            </TableRow>

            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">

                <TextView
                    android:id="@+id/textViewApplNumOfExp"
                    style="@style/TableInfoLabel"
                    android:text="@string/label_yearsofexp" />

                <EditText
                    android:id="@+id/editTextNumOfExp"
                    android:inputType="number"
                    style="@style/TableValue"
                    />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    android:id="@+id/textViewApplExpSal"
                    style="@style/TableInfoLabel"
                    android:text="@string/label_expectedsalary"/>

                <EditText
                    android:id="@+id/editTextExpSal"
                    style="@style/TableValue"
                    android:inputType="number"
                    />
                </LinearLayout>
            </TableRow>
            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_prefShift" />
                <Spinner
                    android:id="@+id/prefShiftSpinner"
                    style="@style/TableValue" />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_qualificationhigh" />

                <EditText
                    android:id="@+id/editTextQualHi"
                    style="@style/TableValue"
                    />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_qualificationother" />

                <EditText
                    android:id="@+id/editTextQualOther"
                    style="@style/TableValue"
                    />
                </LinearLayout>
            </TableRow>
            <include layout="@layout/cert_attachments" />
            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                    <TextView
                        style="@style/TableInfoLabel"
                        android:text="@string/label_interviewernotes" />

                    <EditText
                        android:id="@+id/editTextInterviewerNotes"
                        style="@style/TableValue"
                        />
                </LinearLayout>
            </TableRow>
            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_status" />

                <EditText
                    android:id="@+id/editTextStatus"
                    style="@style/TableValue"
                    android:editable="false"
                    />
                </LinearLayout>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>
