<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="line"
            type="com.pbasolutions.android.model.MMovementLine" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle|end"
            >
            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:editable="false"
                    android:text="@string/mvl_label_productname"
                    />
                <Spinner
                    style="@style/TableValue"
                    android:id="@+id/prodName">
                </Spinner>
                </LinearLayout>
            </TableRow>
            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/mvl_label_productvalue"
                    />
                <com.pbasolutions.android.control.SearchableSpinner
                    app:dlgTitle="@string/title_selectproduct"
                    style="@style/SpinnerTableValue"
                    android:id="@+id/prodValue"
                    android:textSize="@dimen/abc_text_size_body_1_material"
                />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/mvl_label_asi"
                    />
                <Spinner
                    android:id="@+id/asi"
                    style="@style/TableValue"
                    android:textSize="@dimen/abc_text_size_body_1_material">
                </Spinner>
                </LinearLayout>
            </TableRow>
            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/mvl_label_onhandqty"
                    />
                <TextView
                    style="@style/TableValue"
                    android:inputType="number"
                    android:text="@{String.valueOf(line.QtyOnHand)}"
                    android:id="@+id/qtyOnHand"
                    android:textSize="@dimen/abc_text_size_body_1_material">
                </TextView>
                </LinearLayout>
            </TableRow>
            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
            <TextView
                style="@style/TableInfoLabel"
                android:text="@string/mvl_label_uom"
                />
            <TextView
                style="@style/TableValue"
                android:text="@{line.UOMName}"
                android:id="@+id/uom">
            </TextView>
                </LinearLayout>
        </TableRow>
            <TableRow>
                <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    android:id="@+id/textViewMovementQty"
                    style="@style/TableInfoLabel"
                    android:editable="false"
                    android:text="@string/label_movementqty"
                    />
                <EditText
                    style="@style/TableValue"
                    android:text="@{String.valueOf(line.MovementQty.doubleValue())}"
                    android:id="@+id/movementQty"
                    android:inputType="numberDecimal">
                </EditText>
                </LinearLayout>
                </TableRow>
        </TableLayout>
    </LinearLayout>
</layout>