<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="?android:attr/dividerHorizontal"
    android:showDividers="beginning|middle|end">
    >
    <TableRow
        android:layout_marginTop="10dp">

        <TextView
            style="@style/TableLabel"
            android:text="@string/label_picture1"
            />

        <ImageView
            android:id="@+id/taskPicture1"
            android:layout_width="@dimen/dimen_small_pic"
            android:layout_height="@dimen/dimen_small_pic"
            android:layout_column="1"
            android:scaleType="fitXY"
            android:src="@drawable/camera" />
    </TableRow>

    <TableRow android:layout_marginTop="10dp">

        <TextView
            style="@style/TableLabel"
            android:text="@string/label_picture2"
            />

        <ImageView
            android:id="@+id/taskPicture2"
            android:layout_width="@dimen/dimen_small_pic"
            android:layout_height="@dimen/dimen_small_pic"
            android:layout_column="1"
            android:scaleType="fitXY"
            android:src="@drawable/camera" />
    </TableRow>

    <TableRow android:layout_marginTop="10dp">

        <TextView
            style="@style/TableLabel"
            android:text="@string/label_picture3"
            />

        <ImageView
            android:id="@+id/taskPicture3"
            android:layout_width="@dimen/dimen_small_pic"
            android:layout_height="@dimen/dimen_small_pic"
            android:layout_column="1"
            android:scaleType="fitXY"
            android:src="@drawable/camera" />
    </TableRow>

    <TableRow android:layout_marginTop="10dp">

        <TextView
            style="@style/TableLabel"
            android:text="@string/label_picture4"
            />

        <ImageView
            android:id="@+id/taskPicture4"
            android:layout_width="@dimen/dimen_small_pic"
            android:layout_height="@dimen/dimen_small_pic"
            android:layout_column="1"
            android:scaleType="fitXY"
            android:src="@drawable/camera" />
    </TableRow>

    <TableRow android:layout_marginTop="10dp" >

        <TextView
            style="@style/TableLabel"
            android:text="@string/label_picture5"
            />

        <ImageView
            android:id="@+id/taskPicture5"
            android:layout_width="@dimen/dimen_small_pic"
            android:layout_height="@dimen/dimen_small_pic"
            android:layout_column="1"
            android:scaleType="fitXY"
            android:src="@drawable/camera" />
    </TableRow>

</TableLayout>