<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="employee"
            type="com.pbasolutions.android.model.MEmployee"
            />
    </data>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle|end">
        <TableRow>
            <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_name" />
                <EditText
                    android:id="@+id/editTextEmpName"
                    style="@style/TableValue"
                    android:text="@{employee.name}" />
            </LinearLayout>>
        </TableRow>
        <TableRow >
            <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_idtype" />
                <Spinner
                    android:id="@+id/idTypeSpinner"
                    style="@style/TableValue"/>
            </LinearLayout>>
        </TableRow>
        <TableRow>
            <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_idnumber" />
                <EditText
                    android:id="@+id/editTextEmpIDNumber"
                    style="@style/TableValue"
                    android:text="@{employee.idNumber}" />
            </LinearLayout>>
        </TableRow>
        <TableRow>
            <LinearLayout style="@style/PTableVirtRowW">
                <TextView
                    style="@style/TableInfoLabel"
                    android:text="@string/label_phone" />
                <EditText
                    android:id="@+id/editTextEmpPhone"
                    style="@style/TableValue"
                    android:inputType="phone"
                    android:text="@{employee.phone}" />
                </LinearLayout>>
        </TableRow>
    </TableLayout>
    </layout>